--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -15,20 +16,52 @@
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
 
 	<!-- fontawesome -->
-	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css"
+		integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A=="
+		crossorigin="anonymous" referrerpolicy="no-referrer" />
 
 	<!-- bootstrap css -->
-	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
+		integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
 
 	<!-- bootstrap js -->
-	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous" defer></script>
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
+		integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"
+		defer></script>
 
 	<!-- styles -->
 	<link rel="stylesheet" href="css/style.css">
 </head>
+
 <body>
 	<header class="header-page text-white">
-		<nav class="nav-top text-uppercase">
+		<nav class="navbar navbar-expand-sm navbar-dark nav-top text-uppercase fixed-top">
+			<div class="container">
+				<a class="navbar-brand" href="#">Start bootstrap</a>
+
+				<button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+					data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+					aria-label="Toggle navigation">
+					<span class="navbar-toggler-icon"></span>
+				</button>
+
+				<div class="collapse navbar-collapse" id="navbarSupportedContent">
+					<ul class="navbar-nav ms-auto mb-2 mb-sm-0">
+						<li class="nav-item">
+							<a class="nav-link" href="#">Portfolio</a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link" href="#">About</a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link" href="#">Contact</a>
+						</li>
+					</ul>
+				</div>
+			</div>
+		</nav>
+
+		<!-- <nav class="nav-top text-uppercase">
 			<div class="container d-flex justify-content-between align-items-center h-100">
 				<div class="logo">Start bootstrap</div>
 
@@ -42,7 +75,7 @@
 					<li class="ps-4"><a href="#!">Contact</a></li>
 				</ul>
 			</div>
-		</nav>
+		</nav> -->
 
 		<section class="container py-4 text-center text-uppercase">
 			<img class="col-3 mb-3" src="img/avatar.svg" alt="">
@@ -65,19 +98,29 @@
 						</div>
 					</div>
 					<div class="col">
-						<div class="bl_card">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis nemo porro, molestiae sit minus </div>
+						<div class="bl_card">
+							<img class="img-fluid" src="img/cake.png" alt="">
+						</div>
 					</div>
 					<div class="col">
-						<div class="bl_card"></div>
+						<div class="bl_card">
+							<img class="img-fluid" src="img/circus.png" alt="">
+						</div>
 					</div>
 					<div class="col">
-						<div class="bl_card"></div>
+						<div class="bl_card">
+							<img class="img-fluid" src="img/game.png" alt="">
+						</div>
 					</div>
 					<div class="col">
-						<div class="bl_card"></div>
+						<div class="bl_card">
+							<img class="img-fluid" src="img/safe.png" alt="">
+						</div>
 					</div>
 					<div class="col">
-						<div class="bl_card"></div>
+						<div class="bl_card">
+							<img class="img-fluid" src="img/submarine.png" alt="">
+						</div>
 					</div>
 				</div>
 			</div>
@@ -88,15 +131,27 @@
 		<div class="container text-center text-white">
 			<div class="col-10 mx-auto">
 				<h2>About</h2>
-				<div class="col-4 star"></div>
+				<div class="col-4 star"><i class="fa-solid fa-star"></i></div>
+
+				<div class="col-4 star-bool mx-auto">
+					<div class="row align-items-center">
+						<div class="col"></div>
+						<i class="fa-solid fa-star col-auto mx-3"></i>
+						<div class="col"></div>
+					</div>
+				</div>
 
 				<div class="overflow-hidden">
 					<div class="row text-start g-5">
 						<div class="col-12 col-sm-6">
-							Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta suscipit sit deserunt repellat optio impedit, libero maxime quo esse repellendus? Harum labore cupiditate dolore possimus necessitatibus perspiciatis facilis id hic!
+							Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta suscipit sit deserunt repellat
+							optio impedit, libero maxime quo esse repellendus? Harum labore cupiditate dolore possimus
+							necessitatibus perspiciatis facilis id hic!
 						</div>
 						<div class="col-12 col-sm-6">
-							Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi sapiente cupiditate velit nesciunt? Unde nihil illum amet iste fuga rerum vero similique porro eos animi laudantium veniam ratione, a eveniet.
+							Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi sapiente cupiditate velit
+							nesciunt? Unde nihil illum amet iste fuga rerum vero similique porro eos animi laudantium veniam
+							ratione, a eveniet.
 						</div>
 					</div>
 				</div>
@@ -116,14 +171,67 @@
 				<h2 class="text-center">Contact me</h2>
 				<div class="col-4 star"></div>
 
-				<form action="" method="post">
+				<form method="get" action="">
+					<div class="mb-3">
+						<label for="nome" class="form-label">Nome</label>
+						<input type="text" class="form-control" id="nome" name="nome" placeholder="inserire il nome">
+					 </div>
+					<div class="mb-3">
+					  <label for="email" class="form-label">Email address</label>
+					  <input type="email" class="form-control" id="email" name="email" aria-describedby="emailHelp">
+					  <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
+					</div>
+					<div class="mb-3">
+						<label for="messaggio" class="form-label">Messaggio</label>
+						<textarea class="form-control" id="messaggio" name="messaggio" rows="3"></textarea>
+					 </div>
+					<button type="submit" class="btn btn-primary">Invia</button>
+				 </form>
+			</div>
+		</div>
+	</section>
 
-					<button class="btn btn-primary btn-send">Invia</button>
-				</form>
+	<footer class="text-center text-white">
+		<div class="info">
+			<div class="container">
+				<div class="row">
+					<div class="col-4">
+						<div class="content p-4">
+							Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi id ratione cumque corporis
+						</div>
+					</div>
+					<div class="col-4">
+						<div class="content p-4">
+							<h3>Around the web</h3>
+							<div class="d-flex justify-content-center">
+								<a href="" class="btn btn-outline-light btn-social">
+									<i class="fa-brands fa-facebook-f"></i>
+								</a>
+								<a href="" class="btn btn-outline-light btn-social">
+									<i class="fa-brands fa-facebook-f"></i>
+								</a>
+								<a href="" class="btn btn-outline-light btn-social">
+									<i class="fa-brands fa-facebook-f"></i>
+								</a>
+								<a href="" class="btn btn-outline-light btn-social">
+									<i class="fa-brands fa-facebook-f"></i>
+								</a>
+							</div>
+						</div>
+					</div>
+					<div class="col-4">
+						<div class="content p-4">
+							Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi id ratione cumque corporis
+						</div>
+					</div>
+				</div>
 			</div>
 		</div>
 
-
-	</section>
+		<div class="copyright pt-3 pb-4">
+			copyright website 2022
+		</div>
+	</footer>
 </body>
+
 </html>
